--- a/build_exe.yml
+++ b/build_exe.yml
@@ -25,7 +25,7 @@ jobs:
         
     - name: Run PyInstaller
       run: |
-        pyinstaller main.spec
+        pyinstaller UImain.spec
           
     - name: Upload artifact
       uses: actions/upload-artifact@v3
