全局类化，版本控制，修复问题。程序当前版本 1.0

--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -2,7 +2,7 @@ name: Build EXE with PyInstaller
 
 on:
   push:
-    branches: [ main ]  # 只在推送到 main 分支时触发
+    branches: [ master ]  # 只在推送到 main 分支时触发
     paths: [ '**.py' ]  # 只有 Python 文件变化时才触发
 
 jobs:
