--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -2,9 +2,9 @@ name: Build EXE with PyInstaller
 
 on:
   push:
-    branches: [ master ]  # 只在推送到 main 分支时触发
+    branches: [ master ]  # 只在推送到 master分支时触发
     paths: [ '**.py' ]  # 只有 Python 文件变化时才触发
-
+  workflow_dispatch:
 jobs:
   build:
     runs-on: windows-latest  # 使用 Windows 运行器，因为要生成 EXE
