全局类化，版本控制，修复问题。程序当前版本 1.0

--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -32,3 +32,12 @@ jobs:
       with:
           name: executable
           path: dist/  # PyInstaller 默认输出目录
+    - name: Create ZIP archive
+      run: |
+        powershell Compress-Archive -Path dist\* -DestinationPath packaged.zip
+
+    - name: Upload ZIP artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: packaged-exe
+        path: packaged.zip
