--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -20,6 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip uninstall -y pathlib  # ← 强制删除冲突包
         pip install pyinstaller
         pip install -r requirements.txt  # 如果有其他依赖
         
